# STDF

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  docker-compose.yml  pyproject.toml  query.py  query.py.example
client/: stdf_client.py
docker/clickhouse/: init.sql
docker/postgres/: init.sql
docs/: multi-user-server.md  rust_architecture.md  sample_queries.md  schema.md
docs/superpowers/plans/: 2026-04-12-duckdb-singleton.md  2026-04-20-retest-handling.md  2026-06-11-phase1-foundation-refactor.md  2026-06-11-phase2-report-engine.md  2026-06-11-phase3-analysis-templates.md
docs/superpowers/specs/: 2026-04-12-duckdb-singleton-architecture-design.md  2026-04-20-retest-handling-design.md  2026-06-11-multiuser-reporting-design.md  2026-06-11-phase3-analysis-templates-design.md  2026-07-04-multi-user-design.md
rust/: Cargo.toml
rust/src/: lib.rs  parser.rs  python.rs  reader.rs  types.rs
scripts/: bench_parquet_real.py  daily_fetch.ps1  debug_check_test_num.py  register_task.bat  unregister_task.bat
src/stdf2parquet/: __init__.py  cli.py  converter.py  parser.py  records.py
src/stdf_dagster/: README.md  __init__.py  jobs.py
src/stdf_dagster/assets/: __init__.py  analytics.py  ingestion.py  local_ingest.py  postgres_sync.py  tables.py
src/stdf_dagster/resources/: __init__.py  duckdb_resource.py  ftp.py  parquet.py  postgres.py  stdf_config.py  stdf_parser.py
src/stdf_dagster/schedules/: __init__.py  daily.py
src/stdf_dagster/sensors/: __init__.py  ftp_sensor.py
src/stdf_platform/: __init__.py  _ingest_worker.py  app.py  atomic.py  ch_writer.py  chipid.py  cli.py  config.py  database.py  ftp_client.py  ingest_history.py  parser.py  storage.py  sync_manager.py  views.py  worker.py
src/tests/: make_test_stdf.py  synth_data.py  test_analysis_compare.py  test_analysis_correlation.py  test_analysis_session.py  test_analysis_spatial.py  test_analysis_trend.py  test_atomic_save.py  test_chipid_decode.py  test_chipid_e2e.py  test_config_load.py  test_export_lot.py  test_gross_die.py  test_ingest.py  test_ingest_failures.py  test_log_rotation.py  test_post_ingest_report_hook.py  test_reporting_config.py  test_reporting_generator.py  test_reporting_queries.py  test_reporting_render.py  test_reporting_sections.py  test_retest_flag.py  test_retest_storage.py  test_retest_view.py  test_server.py  test_storage_write_retry.py  test_templates_compile.py  test_test_data_of.py  test_verify_flags.py  test_views.py  test_web_health.py  test_web_reports.py  test_worker_pool.py  test_yield_retest.py
templates/analysis/: 01_lot_compare.py  02_trend.py  03_cp_ft_correlation.py  04_wafer_spatial.py
test/: make_test_stdf.py  test_ingest.py  test_timeout.py
tests/: test_chipid_decode.py  test_chipid_e2e.py  test_retest_storage.py
(+23 files in other folders)
