[project]
name = "stdf-platform"
version = "0.2.0"
description = "STDF Data Platform for semiconductor test data analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "streamlit-aggrid>=1.2.1.post2",
]

[project.scripts]
stdf-platform = "stdf_platform.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stdf_platform"]

[tool.hatch.build.targets.sdist]
include = ["src/stdf_platform"]
