[project]
name = "stdf2pq"
version = "0.2.0"
description = "stdf2pq - STDF to Parquet converter and analysis DB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "streamlit-aggrid>=1.2.1.post2",
]

[project.optional-dependencies]
dagster = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
stdf2pq = "stdf_platform.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stdf_platform", "src/stdf_dagster"]

[tool.hatch.build.targets.sdist]
include = ["src/stdf_platform", "src/stdf_dagster"]

[dependency-groups]
dev = [
    "maturin>=1.12.0",
]

[tool.dagster]
module_name = "stdf_dagster"
