[project]
name = "stdf2pq"
version = "0.2.0"
description = "stdf - STDF to Parquet converter and analysis DB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
stdf = "stdf_platform.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stdf_platform"]

[tool.hatch.build.targets.sdist]
include = ["src/stdf_platform"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]
